# tester-agent

./: .env_example  .gitignore  README.md  README_new.md  downloader.py  eval.py  explain_fixtures.py  extracter.py  inspect_failures.py  main.py  process_fixtures.py  pyproject.toml  run_agent.py
agent/: analysis.py  evaluator.py  graph.py  nodes.py  report.py  state.py  tools.py
fixtures/processed/env_issue/: 001.json  001_synthetic.json  002.json  002_synthetic.json  003.json  003_synthetic.json  004.json  005.json  synthetic_001.json
fixtures/processed/flaky/: 001.json  002.json  003.json  004.json  005.json  006.json
fixtures/processed/logic_bug/: 001.json  002.json  003.json  004.json  005.json  synthetic_001.json  synthetic_002.json
fixtures/processed/regression/: 001.json  002.json  003.json  003_synthetic.json  004.json  synthetic_001.json  synthetic_002.json
fixtures/processed/timeout/: 001.json  002.json  002_synthetic.json  003.json  003_synthetic.json  004.json  005.json
